refactor client connection